--- a/plugin-annotation/gradle.properties
+++ b/plugin-annotation/gradle.properties
@@ -2,3 +2,9 @@ VERSION_NAME=0.10.0-SNAPSHOT
 POM_ARTIFACT_ID=android-plugin-annotation-v9
 POM_NAME=MapLibre Android Annotation Plugin
 POM_DESCRIPTION=MapLibre Android Annotation Plugin
+
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx2560M
+android.useAndroidX=true
+android.enableJetifier=true
