--- a/plugin-annotation/build.gradle
+++ b/plugin-annotation/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
 
@@ -20,11 +20,12 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 31
+    namespace 'com.mapbox.mapboxsdk.plugins.annotation'
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         group 'org.maplibre.gl'
 
