--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'com.android.application'
 apply plugin: 'io.github.gradle-nexus.publish-plugin'
 
 buildscript {
@@ -5,7 +6,7 @@ buildscript {
 
   repositories {
     google()
-    maven {   url "https://maven.google.com"   }
+    maven { url "https://maven.google.com" }
     maven { url "https://plugins.gradle.org/m2/" }
     mavenCentral()
   }
@@ -14,7 +15,7 @@ buildscript {
     classpath pluginDependencies.gradle
     classpath pluginDependencies.kotlin
     classpath pluginDependencies.kotlinLint
-    classpath pluginDependencies.gradleNexus    
+    classpath pluginDependencies.gradleNexus
   }
 }
 
@@ -43,7 +44,7 @@ nexusPublishing {
             username = ossrhUsername
             password = ossrhPassword
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))            
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
         }
     }
 }
